<resources>
    <string name="app_name">InClass10</string>
    <string name="editTextEmail">Email</string>
    <string name="editTextPassword">Password</string>
    <string name="buttonLogin">Login</string>
    <string name="buttonSignUp">Sign Up</string>
    <string name="editTextFirstName">FirstName</string>
    <string name="editTextLastName">Last Name</string>
    <string name="editTextRepeatPassword">Repeat Password</string>
    <string name="buttonCancel">Cancel</string>
</resources>
